# -Auto-AI-Automated-Academic-Docx-Manuscript-Formatter

./: .dockerignore  .editorconfig  .fossa.yml  .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  ADOPTERS.md  AUTHORS  BENCHMARKS.md  BUILDING.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  COMPATIBILITY.md  CONTRIBUTING.md  Company_Documentation_FRS_SRS.docx  Company_Documentation_FRS_SRS.md  DEBUGGING.md  DEVELOPER_CERTIFICATE_OF_ORIGIN.md  FAQ.md  GOVERNANCE.md  LICENSE  MAINTAINERS.md  MIGRATION_GUIDES.md  PULL_REQUEST_TEMPLATE.md  README.md  RELEASE_PROCESS.md  SUPPORT.md  ScholarForm_AI_Complete_Master_Plan_v4_FINAL.docx  ScholarForm_AI_Documentation.docx  ScholarForm_AI_Product_Documentation.docx  THIRD_PARTY_NOTICES.md  TRADEMARKS.md  __risk_actions.csv  __risk_table.csv  bandit_report.json  commitlint.config.js  debug_imports.py  (+12 more)
backend/: .env.example  .env.template  MANUAL_TESTING_LOG.md  README.md  alembic.ini  compare_reqs.py  debug_dump_blocks.py  debug_dump_xml.py  debug_list_metadata.py  debug_md.py  debug_nested_tables.py  debug_parser_indices.py  debug_render_full.py  docker-compose.yml  migrations.sql  monitor_production.py  mypy.ini  production_stress_test.py  pyproject.toml  pyrefly.toml  pyrightconfig.json  pytest.ini  quick_validation.py  requirements-render.txt  requirements-test.txt  requirements.md  requirements.txt  requirements_complete.txt  ruff.toml  schema.sql  sync_md.py  test_core.bat  test_core.sh  test_deepseek_models.py  test_load.py  test_output.txt  test_results.txt  verify_contracts.py  (+2 more)
(+1320 files in other folders)
