[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scholarform-backend"
version = "0.0.0"
requires-python = ">=3.12,<3.13"

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["app"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that require external services",
    "llm: marks tests that call LLM services",
    "slow: marks tests that take a long time",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
